--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,7 +61,7 @@
   content:"";
   position:absolute;
   inset: 0;
-  background: rgba(0,0,0,.65);
+  background: rgba(0,0,0,0.65);
 }
 
 .pau-slider .carousel-caption{
