02/02/2026 - btn back-to-top

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -21,6 +21,16 @@
   background-color: var(--blanco);
 }
 
+.bg-resaltado {
+  background-color: var(--naranja-resalt);
+}
+
+.btn-top {
+  border: 1px solid var(--naranja-resalt);
+  color: var(--naranja-resalt);
+  font-weight: bold;
+}
+
 /* ==== INDEX.HTML ==== */
 /* Ajuste Navbar sticky */
 .index section[id] {
